# png2ico

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  ico.cpp  ico.hpp  main.cpp  png.cpp  png.hpp  utils.hpp
